[gd_scene load_steps=10 format=3 uid="uid://2t6bqscvhx3s"]

[ext_resource type="Script" path="res://Scripts/unit.gd" id="1_prx2x"]
[ext_resource type="Texture2D" uid="uid://c080gfbyowj51" path="res://Sprites/placeholder.png" id="2_hheai"]
[ext_resource type="Script" path="res://Scripts/health_component.gd" id="3_cc2ac"]
[ext_resource type="PackedScene" uid="uid://bj2wma534qgyu" path="res://Scenes/selectable_component.tscn" id="4_r574x"]
[ext_resource type="PackedScene" uid="uid://bgjfbspfk8thj" path="res://Scenes/action.tscn" id="5_7ngm7"]

[sub_resource type="Animation" id="Animation_so2g4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UnitSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UnitSprite:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UnitSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_j1vpj"]
resource_name = "damage"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(0.0412346, 0.732043, 1, 1, 11.7127),
"update": 0,
"values": [0.0, -0.523599, 0.0, 0.0698132, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UnitSprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.15, 1.2), Vector2(1.05, 1.3), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UnitSprite:skew")
tracks/2/interp = 4
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.4, 0.5),
"transitions": PackedFloat32Array(0.554785, 12.1257, 0.015625, 4.5948, 8),
"update": 0,
"values": [0.0, -0.0698132, 0.0, 0.0698132, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UnitSprite:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.35, 0.4, 0.45, 0.5),
"transitions": PackedFloat32Array(0.203063, 1, 6.9644, 1, 1, 1),
"update": 0,
"values": [Color(0.909804, 0.435294, 0.52549, 1), Color(1, 1, 1, 1), Color(0.929412, 0.184314, 0.188235, 1), Color(0.941176, 0.431373, 0.85098, 1), Color(0.94902, 0.67451, 0.858824, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uovyx"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:skew")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(0.258816, 3.86374, 2.46229, 0.148651),
"update": 0,
"values": [0.0, -0.0872665, 0.349066, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UnitSprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1.23114, 1.1487),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UnitSprite:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.999999, 1.46408),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UnitSprite:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.329412, 0.196078, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xomi0"]
_data = {
"RESET": SubResource("Animation_so2g4"),
"damage": SubResource("Animation_j1vpj"),
"death": SubResource("Animation_uovyx")
}

[node name="Unit" type="Node2D" node_paths=PackedStringArray("unit_animation") groups=["unit"]]
script = ExtResource("1_prx2x")
unit_animation = NodePath("UnitAnimation")

[node name="UnitSprite" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_hheai")

[node name="SelectableComponent" parent="." instance=ExtResource("4_r574x")]

[node name="Sprite2D" parent="SelectableComponent" index="1"]
light_mask = 2

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_cc2ac")

[node name="UnitAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xomi0")
}

[node name="Action" parent="." instance=ExtResource("5_7ngm7")]
position = Vector2(-10, 11)

[connection signal="just_secondary_selected" from="SelectableComponent" to="." method="_on_selectable_component_just_secondary_selected"]
[connection signal="just_selected" from="SelectableComponent" to="." method="_on_selectable_component_just_selected"]
[connection signal="just_unselected" from="SelectableComponent" to="." method="_on_selectable_component_just_unselected"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="max_health_changed" from="HealthComponent" to="." method="_on_health_component_max_health_changed"]

[editable path="SelectableComponent"]
